# wg14_result

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Readme.md  Readme_8md.html  annotated.html  annotated_dup.js  classes.html  config_8h.html  config_8h.js  config_8h__dep__incl.map  config_8h__dep__incl.md5  config_8h__incl.map  config_8h__incl.md5  config_8h_source.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  dir_f782644f6a26f28b51a5f40945b24ca2.html  dir_f782644f6a26f28b51a5f40945b24ca2.js  dir_f782644f6a26f28b51a5f40945b24ca2_dep.map  dir_f782644f6a26f28b51a5f40945b24ca2_dep.md5  files.html  functions.html  functions_vars.html  globals.html  globals_a.html  globals_defs.html  globals_dup.js  globals_enum.html  globals_eval.html  globals_func.html  globals_o.html  globals_r.html  globals_s.html  globals_type.html  globals_v.html  globals_w.html  graph_legend.html  index.html  (+115 more)
.github/workflows/: ci.yml
SWIG/: wg14_result.i
SWIG/python/: wg14_result.py  wg14_resultPYTHON_wrap.c  wg14_resultPYTHON_wrap.cxx
bindings/SWIG/: wg14_result.i
bindings/SWIG/python/: wg14_result.py  wg14_resultPYTHON_wrap.cxx
bindings/rust/: bindings_test.rs  raw_bindings.rs  wg14_result.rs
include/wg14_result/: all.h  all.hpp  config.h  result.h  status_code.h  status_code_domain.h  status_code_generic.h  status_code_posix.h  status_code_system.h  try.h
search/: all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_e.js  all_f.js  classes_0.js  classes_1.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  pages_4.js  pages_5.js  searchdata.js  (+15 more)
src/wg14_result/: status_code_domain.c  status_code_generic.c  status_code_posix.c
test/: CMakeLists.txt  result_test.c  status_code_test.c  test_common.h
